--- a/app/App_Resources/iOS/Info.plist
+++ b/app/App_Resources/iOS/Info.plist
@@ -47,5 +47,10 @@
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>UIBackgroundModes</key>
+	<array>
+	<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
