--- a/firebase.nativescript.json
+++ b/firebase.nativescript.json
@@ -1,14 +1,14 @@
 {
     "using_ios": true,
-    "using_android": true,
+    "using_android": false,
     "firestore": false,
     "realtimedb": false,
     "remote_config": true,
     "messaging": true,
     "crash_reporting": true,
     "storage": false,
-    "facebook_auth": true,
-    "google_auth": true,
-    "admob": true,
-    "invites": true
+    "facebook_auth": false,
+    "google_auth": false,
+    "admob": false,
+    "invites": false
 }
