--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "nativescript": {
     "id": "com.sminq.places",
     "tns-ios": {
-      "version": "3.3.0"
+      "version": "3.4.1"
     }
   },
   "scripts": {
     "lint": "eslint \"app/**/*.js\""
   },
   "dependencies": {
-    "nativescript-plugin-firebase": "^5.1.1",
+    "nativescript-plugin-firebase": "^5.1.7",
     "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "1.0.4",
-    "tns-core-modules": "3.3.0"
+    "tns-core-modules": "~3.4.0"
   },
   "devDependencies": {
     "eslint": "4.9.0",
